project(coding-interview-chinese2-cmake)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)

include_directories(Utilities)

add_executable(01AssignmentOperator 01AssignmentOperator.cpp)
add_executable(02FindDuplication 02FindDuplication.cpp)
add_executable(02FindDuplicationNoEdit 02FindDuplicationNoEdit.cpp)
add_executable(03FindInPartiallySortedMatrix 03FindInPartiallySortedMatrix.cpp)
add_executable(04ReplaceSpaces 04ReplaceSpaces.cpp)
add_executable(05PrintListInReversedOrder 05PrintListInReversedOrder.cpp Utilities/List.cpp)
add_executable(06ConstructBinaryTree 06ConstructBinaryTree.cpp Utilities/BinaryTree.cpp)
add_executable(07NextNodeInBinaryTrees 07NextNodeInBinaryTrees.cpp)
add_executable(08QueueWithTwoStacks 08QueueWithTwoStacks.cpp)
add_executable(08StackWithTwoQueues 08StackWithTwoQueues.cpp)
add_executable(09Fibonacci 09Fibonacci.cpp)
add_executable(10MinNumberInRotatedArray 10MinNumberInRotatedArray.cpp)
add_executable(11StringPathInMatrix 11StringPathInMatrix.cpp)
add_executable(12RobotMove 12RobotMove.cpp)
add_executable(13CuttingRope 13CuttingRope.cpp)
add_executable(14NumberOf1InBinary 14NumberOf1InBinary.cpp)
add_executable(16Power 16Power.cpp)
add_executable(17Print1ToMaxOfNDigits 17Print1ToMaxOfNDigits.cpp)
add_executable(18_01_DeleteNodeInList 18_01_DeleteNodeInList.cpp Utilities/List.cpp)
add_executable(18_02_DeleteDuplicatedNode 18_02_DeleteDuplicatedNode.cpp Utilities/List.cpp)
add_executable(19RegularExpressions 19RegularExpressions.cpp)
add_executable(20NumericStrings 20NumericStrings.cpp)
add_executable(21ReorderArray 21ReorderArray.cpp)