project(coding-interview-chinese2-cmake)
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 11)

include_directories(Utilities)

add_executable(01AssignmentOperator 01AssignmentOperator.cpp)
add_executable(02FindDuplication 02FindDuplication.cpp)
add_executable(02FindDuplicationNoEdit 02FindDuplicationNoEdit.cpp)
add_executable(03FindInPartiallySortedMatrix 03FindInPartiallySortedMatrix.cpp)
add_executable(04ReplaceSpaces 04ReplaceSpaces.cpp)
add_executable(05PrintListInReversedOrder 05PrintListInReversedOrder.cpp Utilities/List.cpp)
add_executable(06ConstructBinaryTree 06ConstructBinaryTree.cpp Utilities/BinaryTree.cpp)
add_executable(07NextNodeInBinaryTrees 07NextNodeInBinaryTrees.cpp)
add_executable(08QueueWithTwoStacks 08QueueWithTwoStacks.cpp)
add_executable(08StackWithTwoQueues 08StackWithTwoQueues.cpp)
add_executable(09Fibonacci 09Fibonacci.cpp)
add_executable(10MinNumberInRotatedArray 10MinNumberInRotatedArray.cpp)
add_executable(11StringPathInMatrix 11StringPathInMatrix.cpp)
add_executable(12RobotMove 12RobotMove.cpp)
add_executable(13CuttingRope 13CuttingRope.cpp)
add_executable(14NumberOf1InBinary 14NumberOf1InBinary.cpp)
add_executable(16Power 16Power.cpp)
add_executable(17Print1ToMaxOfNDigits 17Print1ToMaxOfNDigits.cpp)
add_executable(18_01_DeleteNodeInList 18_01_DeleteNodeInList.cpp Utilities/List.cpp)
add_executable(18_02_DeleteDuplicatedNode 18_02_DeleteDuplicatedNode.cpp Utilities/List.cpp)
add_executable(19RegularExpressions 19RegularExpressions.cpp)
add_executable(20NumericStrings 20NumericStrings.cpp)
add_executable(21ReorderArray 21ReorderArray.cpp)
add_executable(22KthNodeFromEnd 22KthNodeFromEnd.cpp Utilities/List.cpp)
add_executable(23EntryNodeInListLoop 23EntryNodeInListLoop.cpp Utilities/List.cpp)
add_executable(24ReverseList 24ReverseList.cpp Utilities/List.cpp)
add_executable(25MergeSortedLists 25MergeSortedLists.cpp Utilities/List.cpp)
add_executable(26SubstructureInTree 26SubstructureInTree.cpp)
add_executable(27MirrorOfBinaryTree 27MirrorOfBinaryTree.cpp Utilities/BinaryTree.cpp)
add_executable(28SymmetricalBinaryTree 28SymmetricalBinaryTree.cpp Utilities/BinaryTree.cpp)
add_executable(29PrintMatrix 29PrintMatrix.cpp)
add_executable(30MinInStack 30MinInStack.cpp)
add_executable(31StackPushPopOrder 31StackPushPopOrder.cpp)
add_executable(32_01_PrintTreeFromTopToBottom 32_01_PrintTreeFromTopToBottom.cpp Utilities/BinaryTree.cpp)
add_executable(32_02_PrintTreesInLines 32_02_PrintTreesInLines.cpp Utilities/BinaryTree.cpp)
add_executable(32_03_PrintTreesInZigzag 32_03_PrintTreesInZigzag.cpp Utilities/BinaryTree.cpp)
add_executable(33SquenceOfBST 33SquenceOfBST.cpp)
add_executable(34PathInTree 34PathInTree.cpp Utilities/BinaryTree.cpp)
add_executable(35CopyComplexList 35CopyComplexList.cpp Utilities/ComplexList.cpp)
add_executable(36ConvertBinarySearchTree 36ConvertBinarySearchTree.cpp Utilities/BinaryTree.cpp)
add_executable(37SerializeBinaryTrees 37SerializeBinaryTrees.cpp Utilities/BinaryTree.cpp)
add_executable(38StringPermutation 38StringPermutation.cpp)
add_executable(39MoreThanHalfNumber 39MoreThanHalfNumber.cpp Utilities/Array.cpp)
add_executable(40KLeastNumbers 40KLeastNumbers.cpp Utilities/Array.cpp)
add_executable(41StreamMedian 41StreamMedian.cpp)
add_executable(42GreatestSumOfSubarrays 42GreatestSumOfSubarrays.cpp)
add_executable(43NumberOf1 43NumberOf1.cpp)
add_executable(44DigitsInSequence 44DigitsInSequence.cpp)
add_executable(45SortArrayForMinNumber 45SortArrayForMinNumber.cpp)
add_executable(46TranslateNumbersToStrings 46TranslateNumbersToStrings.cpp)
add_executable(47MaxValueOfGifts 47MaxValueOfGifts.cpp)
add_executable(48LongestSubstringWithoutDup 48LongestSubstringWithoutDup.cpp)
add_executable(49UglyNumber 49UglyNumber.cpp)
add_executable(50_01_FirstNotRepeatingChar 50_01_FirstNotRepeatingChar.cpp)
add_executable(50_02_FirstCharacterInStream 50_02_FirstCharacterInStream.cpp)
add_executable(51InversePairs 51InversePairs.cpp)
add_executable(52FirstCommonNodesInLists 52FirstCommonNodesInLists.cpp Utilities/List.cpp)
add_executable(53_01_NumberOfK 53_01_NumberOfK.cpp)
add_executable(53_02_MissingNumber 53_02_MissingNumber.cpp)
add_executable(53_03_IntegerIdenticalToIndex 53_03_IntegerIdenticalToIndex.cpp)
add_executable(54KthNodeInBST 54KthNodeInBST.cpp Utilities/BinaryTree.cpp)
add_executable(55_01_TreeDepth 55_01_TreeDepth.cpp Utilities/BinaryTree.cpp)
add_executable(55_02_BalancedBinaryTree 55_02_BalancedBinaryTree.cpp Utilities/BinaryTree.cpp)
add_executable(56_01_NumbersAppearOnce 56_01_NumbersAppearOnce.cpp)
add_executable(56_02_NumberAppearingOnce 56_02_NumberAppearingOnce.cpp)
add_executable(57_01_TwoNumbersWithSum 57_01_TwoNumbersWithSum.cpp)
add_executable(57_02_ContinuousSquenceWithSum 57_02_ContinuousSquenceWithSum.cpp)
add_executable(58_01_ReverseWordsInSentence 58_01_ReverseWordsInSentence.cpp Utilities/StringUtil.cpp)
add_executable(58_02_LeftRotateString 58_02_LeftRotateString.cpp Utilities/StringUtil.cpp)
add_executable(59_01_MaxInSlidingWindow 59_01_MaxInSlidingWindow.cpp)
add_executable(59_02_QueueWithMax 59_02_QueueWithMax.cpp)
add_executable(60DicesProbability 60DicesProbability.cpp)